fixed styling on mobile

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -66,7 +66,7 @@ div.grid {
     width: 80%;
     height: 25vh;
     margin-top: 50px;
-    margin-right: 10px;
+    margin-left: 7%;
     overflow: auto;
     border-radius: 20px;
 }
@@ -94,6 +94,7 @@ form {
     background-color: #c7ffc7;
     display: inline-block;
     margin-top: 50px;
+    margin-right: 3%;
 }
 
 #personal img {
@@ -102,6 +103,8 @@ form {
 
 nav {
     position: fixed;
+    text-align: center;
+    width: 100vw;
     top: 0px;
     left: 0px;
 }
@@ -109,9 +112,11 @@ nav {
 nav a {
     background-color:rgba(240, 179, 255, 0.6);
     padding: 10px;
+
     line-height: 45px;
     font-family: monospace;
     font-size: 25px;
+    border-radius: 10px;
 }
 
 @media all and (min-width:800px) {
@@ -143,6 +148,8 @@ nav a {
         padding-left: 20px;
         display: block;
         margin-left: 0px;
+        border-radius: 0px;
+        text-align: left;
     }
 
     nav {
